<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/about" />
        <item
            android:id="@+id/nav_events"
            android:icon="@drawable/events"
            android:title="@string/events" />
        <item
            android:id="@+id/nav_schedule"
            android:icon="@drawable/events"
            android:title="@string/schedule" />
        <item
            android:id="@+id/nav_register"
            android:icon="@drawable/register"
            android:title="@string/register" />
        <item
            android:id="@+id/nav_payment"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/payment" />
        <item
            android:id="@+id/nav_registeredevents"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/registered_events" />
        <item
            android:id="@+id/nav_blog"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/blog" />
        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/map"
            android:title="@string/map" />
        <item
            android:id="@+id/nav_howtoreach"
            android:icon="@drawable/map"
            android:title="@string/howtoreach" />
        <item
            android:id="@+id/nav_sponsors"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/sponsors" />
        <item
            android:id="@+id/nav_contactus"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/contact_us" />
        <item
            android:id="@+id/nav_developers"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/developers" />

    </group>

    <!--<item android:title="Communicate">-->
        <!--<menu_main>-->
            <!--<item-->
                <!--android:id="@+id/nav_share"-->
                <!--android:icon="@drawable/ic_menu_share"-->
                <!--android:title="share" />-->
            <!--<item-->
                <!--android:id="@+id/nav_send"-->
                <!--android:icon="@drawable/ic_menu_send"-->
                <!--android:title="send" />-->
        <!--</menu_main>-->
    <!--</item>-->

</menu>
